# pixhub-rs

./: .env.example  Cargo.toml  README.md
.github/workflows/: rust.yml
public/: index.html  script.js  style.css
src/: config.rs  db.rs  error.rs  main.rs  routes.rs
